首页开发完毕，第二屏样式需要在调整

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -35,6 +35,8 @@ input {
 }
 
 body {
+    background-color: #0c111f;
+    transition: background-color 0.3s linear;
     font-family: 'Helvetica Neue', Tahoma, Arial, 'Hiragino Sans GB', PingFangSC, Averta, 'Microsoft Yahei',  sans-serif;
 }
 
