--- a/src/components/loadableHandler/loadableHandler.scss
+++ b/src/components/loadableHandler/loadableHandler.scss
@@ -4,3 +4,15 @@
     align-content: center;
     justify-content: center;
 }
+.loading{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  img{
+    width: 40px;
+    height: 40px;
+    margin: 0 auto;
+    margin-top: 40vh;
+  }
+}
