--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -11,9 +11,9 @@
 }
 
 .fixed-list div{
-  transition: all 1000ms ease;
-  width: 10px;
-  height: 10px;
+  transition: all 1s cubic-bezier(0, 0.71, 0.65, 0.78);
+  width: 6px;
+  height: 6px;
   background:#ccc;
   border-radius: 50%;
   margin-bottom: 20px;
@@ -21,5 +21,5 @@
 
 .fixed-list div.color{
   background:#fff;
-  transform:scale(1.4);
+  transform:scale(2.6);
 }
