--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -38,6 +38,7 @@ body {
     background-color: #0c111f;
     transition: background-color 0.3s linear;
     font-family: 'Helvetica Neue', Tahoma, Arial, 'Hiragino Sans GB', PingFangSC, Averta, 'Microsoft Yahei',  sans-serif;
+    min-width: 1280px;
 }
 
 html {
