--- a/src/pages/thirdOne/index.scss
+++ b/src/pages/thirdOne/index.scss
@@ -14,6 +14,7 @@
     box-sizing: border-box;
     color: #fff;
     div{
+      border-radius: 8px;
       width: 100%;
       height: 100%;
       background: #fff;
