feat: 新增回到顶部按钮， fix: 优化下一页开发模式

--- a/src/pages/fourthOne/index.scss
+++ b/src/pages/fourthOne/index.scss
@@ -1,6 +1,7 @@
 .fourth{
   background: url('../../assets/img/3.jpg') no-repeat center center;
   background-size: 100% auto; 
+  position: relative;
   .fourth-main{
     width: 100%;
     height: calc(100% - 30vh);
