--- a/src/pages/secondOne/index.scss
+++ b/src/pages/secondOne/index.scss
@@ -1,6 +1,7 @@
 .second{
   background: url('../../assets/img/5.jpg') no-repeat center center;
-  background-size: 100% auto; 
+  background-size: 100% auto;
+  position: relative;
   .second-main{
     width: 100%;
     height: calc(100% - 20vh);
