--- a/src/pages/firstOne/index.scss
+++ b/src/pages/firstOne/index.scss
@@ -1,6 +1,7 @@
 .first{
   background: url('../../assets/img/1.jpg') no-repeat center center;
   background-size: 100% 100%; 
+  position: relative;
   // 第一页标题
   .first-tit{
     display: inline-block;
@@ -46,74 +47,5 @@
   .first-poem-active{
     opacity: 0.4;
     margin-left: 30px;
-  }
-  .light-swip{
-    cursor: pointer;
-    position: absolute;
-    left: 50%;
-    bottom: 90px;
-    .ActiveHead{
-      text-align: center;
-      i{
-        color: #fff;
-        opacity: 0.8;
-        font-size: 14px;
-        position: absolute;
-        text-align: center;
-        line-height: 36px;
-        margin: -2px 0 0 8px;
-        animation-name: LighI;
-        animation-duration: 3s;
-        animation-timing-function:  ease-out;
-        animation-fill-mode: backwards;
-        animation-iteration-count: infinite;
-      }
-      div{
-        width: 30px;
-        height: 30px;
-        background: #fff;
-        position: absolute;
-        border-radius: 50%;
-        animation-name: LightOnnn;
-        animation-duration: 3s;
-        animation-timing-function:  ease-out;
-        animation-fill-mode: backwards;
-        animation-iteration-count: infinite;
-      }
-      .lightTwo{
-        animation-delay:0.3s;
-      }
-      .lightThree{
-        animation-delay:0.6s;
-      }
-      @keyframes LighI {
-        0%{
-          opacity: 0.3;
-        }
-        50%{
-          opacity: 0.8;
-        }
-        100%{
-          opacity: 0.3;
-        }
-      }
-      @keyframes LightOnnn {
-        0%{
-          opacity: 0;
-          transform: scale(0.4)
-        }
-        10%{
-          opacity: 0.2;
-        }
-        33%{
-          opacity: 0;
-          transform: scale(1.2)
-        }
-        100%{
-          opacity: 0;
-          transform: scale(0.4)
-        }
-      }
-    }
   }
 }
