--- a/src/pages/thirdOne/index.scss
+++ b/src/pages/thirdOne/index.scss
@@ -1,6 +1,7 @@
 .third{
   background: url('../../assets/img/4.jpg') no-repeat center center;
   background-size: 100% auto; 
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   .third-gorup{
