--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -35,7 +35,7 @@ input {
 }
 
 body {
-    background-color: #0c111f;
+    // background-color: #0c111f;
     transition: background-color 0.3s linear;
     font-family: 'Helvetica Neue', Tahoma, Arial, 'Hiragino Sans GB', PingFangSC, Averta, 'Microsoft Yahei',  sans-serif;
     min-width: 1280px;
